# gobble

./: .gitignore  Makefile  README  board.scm  boggle.scm  dictionary.sls  etude.org  etude.ss  gobble.ijs  gobble.sls  gobbler.ss  load.scm  solver.ijs  test.ss  todo.org  trie.scm  trie.sls
cobble/: Makefile  bench.ijs  bench.ss  dictionary.sls  etude.ss  gobble.sls  gobbler.ss  load.scm  test.ss
cobble/code/: board.scm  boggle.scm  dictionary.scm  gobble.scm  trie.scm
cobble/share/: frequencies.txt
code/: board.scm  boggle.scm  dice.scm  dictionary.scm  trie.scm  words.scm
deploy/: app.nix  aws.nix  chez-gobble.nix
garcon/: Garcon.hs  Main.hs  Paths_garcon.hs  Toggle.hs  dawggle.dawg  default.nix  garcon.cabal  gobble.nix  icon.rkt  shell.nix
garcon/Gobble/: Core.hs  Dawg.hs  Dawggle.hs  Doggle.hs  Memory.hs  Message.hs  Render.hs  System.hs
garcon/code/: Main.hs
garcon/code/Gobble/: Core.hs  Kernel.hs  Outils.hs  Render.hs
garcon/static/: glibble.css  gobble.css  gobble.js
joggle/: client.ijs  dictionary.ijs  gobble.ijs  graph.ijs  joggle.jproj  run.ijs  scrape.ijs  test.ijs
nibble/: app.nix  aws.nix  chez-euler.nix  chez-gobble.nix  chez-hemlock.nix  packed-dawg.nix
report/: bench.txt  freq.txt
robble/: dictionary.rkt  gobble.rkt  trie.rkt
script/: boards.sh  static.sh
