cabal-version:       2.4

name:                gobble
version:             0.1.0.0
build-type:          Simple

common doggle
  default-language: Haskell2010
  build-depends:
    bytestring,
    filepath,
    warp,
    servant,
    servant-server,
    servant-client,
    servant-blaze,
    unix,
    text,
    process,
    websockets,
    lens,
    mtl,
    wai-websockets,
    wai,
    time,
    stm,
    blaze-html,
    aeson,
    lens-aeson,
    containers,
    directory,
    base,
    diagrams,
    diagrams-svg,
    diagrams-lib,
    colour,
    hashable,
    random,
    random-shuffle,
    utf8-string

executable gobble
  import: doggle
  main-is:          Garcon.hs
  other-modules:    Gobble.Core, Gobble.Render, Gobble.System
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -Wunused-imports