cabal-version:       2.4

name:                gobble
version:             0.1.0.0
build-type:          Simple

-- the deps
common doggle
  build-depends:
    bytestring,
    filepath,
    warp,
    servant,
    servant-server,
    data-default,
    servant-client,
    servant-auth-server,
    servant-blaze,
    text,
    websockets,
    lens,
    mtl,
    wai-websockets,
    wai,
    time,
    stm,
    blaze-html,
    aeson,
    lens-aeson,
    containers,
    unordered-containers,
    directory,
    base,
    diagrams,
    diagrams-svg,
    diagrams-lib,
    colour,
    hashable,
    random,
    random-shuffle,
    utf8-string,
    binary,
    deepseq,
    vector,
    vector-binary-instances,
    HDBC,
    HDBC-sqlite3
--    persistent,
--    persistent-sqlite
  ghc-options:  -O2 -threaded
  default-language: Haskell2010

-- the server
executable garcon
  import: doggle
  main-is: Garcon.hs
  exposed-modules:
    Gobble.Core, Gobble.Dawg, Gobble.Render,
    Gobble.System, Gobble.Dawggle

-- the tests
test-suite toggle
  import: doggle
  type: exitcode-stdio-1.0
  main-is: Toggle.hs
  build-depends: hspec
